<resources>
    <string name="app_name">Firebase Chat Application</string>
    <string name="chat_with">%s</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="click_here_to_register">Click here to Register</string>
    <string name="register">Register</string>
    <string name="click_here_to_login">Click here to Login</string>
    <string name="no_users_found">No users found!</string>
    <string name="write_a_message">Write a message…</string>
    <string name="send_button_content_description">send button</string>
</resources>